# QuPCA

./: .gitignore  README.md  SECURITY.md  Threshold.ipynb  class_usability.ipynb  new_tomography-Copy1.ipynb  new_tomography.ipynb  optimized-end-to-end.ipynb  pyproject.toml
QPCA/: __init__.py  requirements.txt
QPCA/benchmark/: benchmark.py
QPCA/benchmark/.ipynb_checkpoints/: benchmark-checkpoint.py
QPCA/decomposition/: Qpca.py  __init__.py  qpca_model.py
QPCA/decomposition/.ipynb_checkpoints/: Qpca-checkpoint.py
QPCA/docs1/_build/doctrees/: QPCA.doctree  Q_postprocessing.doctree  (+1 more)
QPCA/postprocessingUtilities/: postprocessing_eig_reconstruction.py
QPCA/preprocessingUtilities/: preprocessing.py  preprocessing_matrix_utilities.py
QPCA/quantumUtilities/: Tomography.py  __init__.py  phase_estimation_builder.py  qram_circuit_builder.py  state_vector_tomography.py
docs/: Example of QPCA usage.rst  Example of benchmark.rst  Example of state tomography usage.rst  Example_benchmark.rst  Example_modules.rst  Example_tomography_modules.rst  PE.rst  QPCA.rst  QUtilities.rst  Q_postprocessing.rst  Q_preprocessing.rst  Qram.rst  Tomography.rst  conf.py  index.rst
notebooks/: README.md
notebooks/benchmarks/: Benchmark-CSV_Primitives.ipynb  Benchmark.ipynb  real_hw_experiments_primitives.ipynb
notebooks/explorations/: initial_tests.ipynb  new_tomography.ipynb  thetas_computation.ipynb
notebooks/tutorials/: class_usability.ipynb  end-to-end.ipynb  preprocessing_pe_tomography.ipynb  preprocessing_pe_tomography_reconstruction.ipynb  resolution_choices_example.ipynb
(+17 files in other folders)
