[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qupca"
version = "0.1.0"
description = "Quantum Principal Component Analysis utilities, notebooks, and benchmarks"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [
  { name = "QuPCA contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.24,<3",
  "pandas>=1.5,<3",
  "qiskit>=1.4.2,<2.0.0",
  "qiskit-aer>=0.15,<1.0",
  "qiskit-ibm-runtime>=0.34,<1.0",
  "scipy>=1.10,<2",
  "texttable>=1.7,<2",
]

[project.optional-dependencies]
docs = [
  "sphinx>=6.1,<8",
  "sphinx-rtd-theme>=3,<4",
]
notebooks = [
  "jupyter>=1,<2",
  "pylatexenc>=2.10,<3",
  "qiskit-experiments>=0.8,<1.0",
  "seaborn>=0.13,<1",
]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["QPCA", "QPCA.*"]
